# midicine_project

./: LICENSE  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requrements.txt
backend/account/: models.py  permissions.py  serialazers.py  urls.py  views.py
backend/account/migrations/: 0001_initial.py  0002_customuser_expirience.py  0003_alter_customuser_expirience.py
backend/article/: admin.py  models.py  serialazers.py  urls.py  views.py
backend/article/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/quiz/: admin.py  models.py  serialazers.py  urls.py  views.py
backend/quiz/migrations/: 0001_initial.py  0002_exam_photo.py  0002_remove_exam_slug.py  0003_alter_exam_photo.py  0003_alter_exam_slug.py
django/: .pre-commit-config.yaml
django/account/: admin.py
django/account/migrations/: 0001_initial.py
django/config/: settings.py
react/: package-lock.json  package.json
react/src/: App.js  index.css  urls.js
react/src/components/Quiz/: Quiz.css  (+1 more)
react/src/page/: Auth.jsx
telegram_bot/: .env  Dockerfile  app.py  loader.py  requirements.txt  requrements.txt
telegram_bot/data/: config.py
telegram_bot/filters/: __init__.py  forwarded_massage.py
telegram_bot/handlers/users/: __init__.py  about.py  duel.py  exams.py  profile.py  rating.py  start.py
telegram_bot/keyboards/default /: keyboards_menu.py
telegram_bot/keyboards/defaultt/: keyboards_menu.py
telegram_bot/keyboards/inline/: user_inline.py
telegram_bot/middlewares/: __init__.py  database.py  throttling.py
telegram_bot/utils/: notify_admins.py
(+39 files in other folders)
