[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alisultanoc Dzhamaludin <alisultanovdzh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.1"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
djoser = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
